--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#752087">
   <title>Palette Picker</title>
   <link rel="stylesheet" type="text/css" href="./css/fix.css">
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Dosis|Space+Mono" rel="stylesheet">
   <link rel="stylesheet" href="./css/fontello/css/fontello.css">
+  <link rel="manifest" href="./manifest.json">
 </head>
 
 <body class="app">
@@ -79,6 +81,7 @@
   <div class="project-container"></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="./js/jquery.min.js"></script>
   <script src="./js/scripts.js"></script>
 </body>
 
