--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis|Space+Mono" rel="stylesheet">
   <link rel="stylesheet" href="./css/fontello/css/fontello.css">
   <link rel="manifest" href="./manifest.json">
+  <link rel="shortcut icon" type="image/png" href="./images/icons/Palette-Picker-Favicon.ico"/>
 </head>
 
 <body class="app">
