--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis|Space+Mono" rel="stylesheet">
   <link rel="stylesheet" href="./css/fontello/css/fontello.css">
   <link rel="manifest" href="./manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/palette_picker_icon.ico">
+  <link rel="shortcut icon" href="./palette_picker_icon.ico">
 </head>
 
 <body class="app">
